style.css bijgwerkt

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -3,7 +3,8 @@
   --secondColor: #a3f4dc;
   --darkColor: #212121;
   --greyColor: #9c9c9c;
-  --padding: 3rem;
+  --paddingBig: 3rem;
+  --padding: 1.6rem;
   --paddingSmall: 1.2rem;
   --margin: 3rem;
   --fontFamily: roboto;
