--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -3,6 +3,7 @@
   --secondColor: #a3f4dc;
   --darkColor: #212121;
   --greyColor: #9c9c9c;
+  --darkGreyColor: #564f4f;
   --paddingBig: 3rem;
   --padding: 1.6rem;
   --paddingSmall: 1.2rem;
