--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,10 @@
 .header {
+  grid-area: header;
   padding: var(--padding);
-  background-repeat: no-repeat;
-  background-position: right;
   margin-right: var();
   display: flex;
   justify-content: space-between;
 }
-
 
 .h1-like {
   font-size: var(--title);
@@ -20,4 +18,9 @@
 .h2-like {
   font-size: var(--smallText);
   margin-bottom: 6rem;
+}
+
+.header_image {
+  width: 14rem;
+  align-self: center;
 }
