--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,6 @@ html {
   height: 100vh;
   display: flex;
   flex-flow: column;
-
 }
 
 .highlight {
@@ -161,14 +160,12 @@ html {
 .nav_element {
   display: flex;
   flex-flow: column;
-
   padding: 1.8rem 0;
 }
 
 .footer_link {
   text-decoration: none;
   color: var(--darkGreyColor);
-
 }
 
 .footer-active {
@@ -180,20 +177,12 @@ html {
   .layout {
     display: grid;
     grid-template-columns: 3fr 5fr;
-    grid-template-rows: 0fr 2fr auto;
+    grid-template-rows: .5fr 2fr auto;
     grid-template-areas:
       'header orders'
       'prices orders'
       'picture orders'
       'footer footer';
-  }
-
-  .header__titles {
-    grid-area: header;
-  }
-
-  .header_image{
-    grid-area: picture;
   }
 
   .prices {
@@ -204,12 +193,16 @@ html {
     grid-area: orders;
   }
 
-  .total {
-    padding: var(--paddingBig);
+  .header_image {
+    grid-area: picture;
   }
 
   .footer {
     grid-area: footer;
+  }
+
+  .total {
+    padding: var(--paddingBig);
   }
 
   .prices__list {
