--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,7 @@ html {
 .remove {
   color: var(--greyColor);
   font-size: var(--text);
-  padding: 0;
+  margin: .5rem;
 }
 
 .title_mini {
@@ -177,7 +177,7 @@ html {
   .layout {
     display: grid;
     grid-template-columns: 3fr 5fr;
-    grid-template-rows: 1fr 4©fr .5fr auto;
+    grid-template-rows: 1fr 4fr .5fr auto;
     grid-template-areas:
       'header orders'
       'prices orders'
